Bug 1038093 - Create Latin1 strings in some more cases, when Latin1 strings are enabled. r=luke